Fix CORS hardcode Vercel origin